# KassStorager

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: Storager.md  index.md
kassstorager/: Storager.py  StoragerAwsS3.py  StoragerOs.py  __init__.py
tests/: test_storager.py  test_storager_s3.py  test_storaget_s3.py
tests/storage_other/other/: arquivo.txt
