[tool.poetry]
name = "kassstorager"
version = "0.1.0"
description = ""
authors = ["cassio.douglas <kass.doug@gmail.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
isort = "^5.13.2"
taskipy = "^1.12.2"
rich = "^13.7.0"
boto3 = "^1.34.35"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.7"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.init_options]
pythonpath = "."
addopts = "--doctest-modules--"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "black --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=kassstorager -vv"
post_test = "coverage html"
publish = "poetry publish -u __token__ -p $NOTAS_MUSICAIS_TOKEN"